Fix top bar problem for now (or at least the overlap)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,7 @@
 #stats a {
   color: white;
 }
+
+body {
+  padding-top: 30px;
+}
